Add user select dropdown
Initialize user from environment file, but add a dropdown to select the user
from UI.

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -20,11 +20,16 @@
     }
 
     .other button {
-      background-color: #8e6db0;
+      background-color: #8f849a;
     }
 
     .other .active {
-      background-color: #751ed2;
+      background-color: #7c73ab;
+    }
+
+    #select-user {
+      color: white;
+      background-color: #404040;
     }
   </style>
 </head>
@@ -62,6 +67,10 @@
     <article>
       <button id="start">Start</button>
       <button id="stop">Stop</button>
+      <select id="select-user" name="user">
+        <option value="A">A</option>
+        <option value="B">B</option>
+      </select>
     </article>
   </main>
 </body>
